tests/snapshots/binds__bind_if_non_matched@001.snap
---
source: tests/binds.rs
description: "input: items [\"a\", \"b\"]\noptions: --bind enter:if-non-matched(backward-delete-char) -q ab"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/2                                                                        0/0"
"> ab                                                                            "
cursor: (24, 5)
