tests/snapshots/binds__bind_if_non_matched@002.snap
---
source: tests/binds.rs
description: "input: items [\"a\", \"b\"]\noptions: --bind enter:if-non-matched(backward-delete-char) -q ab\nafter:\n  @key Enter"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> a                                                                             "
"  1/2                                                                        0/0"
"> a                                                                             "
cursor: (24, 4)
