tests/snapshots/binds__bind_if_non_matched@003.snap
---
source: tests/binds.rs
description: "input: items [\"a\", \"b\"]\noptions: --bind enter:if-non-matched(backward-delete-char) -q ab\nafter:\n  @key Enter\n  @char 'c'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/2                                                                        0/0"
"> ac                                                                            "
cursor: (24, 5)
