tests/snapshots/binds__bind_one@001.snap
---
source: tests/binds.rs
description: "input: items [\"apple\", \"banana\", \"cherry\"]\noptions: --bind one:set-header(single)\nafter:\n  @type \"app\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> apple                                                                         "
"  single                                                                        "
"  1/3                                                                        0/0"
"> app                                                                           "
cursor: (24, 6)
