tests/snapshots/binds__bind_set_header_from_empty.snap
---
source: tests/binds.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  b                                                                             "
"> a                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
